--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "engines":{
-        "node":"20.11.0"
-    },
+  "engines": {
+    "node": "20.11.0"
+  },
   "name": "major-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "contains code of the major project initial part (backened).",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
